--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: blog
 title: Blog
 description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
+  개에서 개발자까지
 last_modified_at: 2018-08-03
 no_link_title: false 
 no_excerpt: false 
-hide_image: false
-cover: true
+hide_image: true
+cover: false
 ---
