--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: blog
 title: do
 description: >
-  개에서 개발자까지
+  moonshot
 last_modified_at: 2018-08-03
 no_link_title: false 
 no_excerpt: false 
